welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:25: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
 if (getX()==getMondeHauteur()-1 && getY()==getMondeLargeur()-1) 
 ^ZigZag:26: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
 {return true} else {return false}
 ^ZigZag:33: error: illegal start of simple expression
} 
^